# xpdt

./: .bumpversion.cfg  .gitignore  MANIFEST.in  Makefile  README.md  pre-commit.sh  pyproject.toml  setup.py
benchmark/: __main__.py
examples/: example1.xpdt
include/xpdt/: x1b.h  xbuf.h  xbuf_iter.h  xfilemap.h  xpdt.h  xu128.h
support/c/: xfilemap.c
test/: test_decode.py  test_enums.py  test_nested.py  test_parser.py  test_registry.py  test_roundtrip.py  test_stringy.py
xpdt/: __init__.py  __main__.py  __version__.py  basetypes.py  buftype.py  buftypes.py  c.py  decl.py  dupes.py  integraltype.py  intstack.py  jinja.py  lex.py  load.py  member.py  namespace.py  parse.py  registry.py  shiftreduce.py  struct.py  symbology.py  type.py  typedef.py  utf8type.py  uuidtype.py
xpdt/templates/: api.c  apihdr.c  fixed.pyt  func_decls.h  macros.c  vbuf.pyt  x1b.c  x1b.pyt  x1b_defns.c  x1b_defns.pyt  xpdt.c  xpdt.pyt
